--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,27 @@ services:
     volumes: 
       - ${WEBSITE_DATA}:/www/wwwroot
       - ${WEBSITE_LOG}:/www/wwwlogs
+
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    restart: unless-stopped
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+      - ./prometheus/web.yml:/etc/prometheus/web.yml
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+      - '--collector.netclass.ignored-devices=^(veth.*)$$'
+      - '--web.config=/etc/prometheus/web.yml'
+    ports:
+      - 9100:9100
+    networks:
+      - monitoring
+    labels:
+      org.label-schema.group: "monitoring"
