--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Control Panel
 AAPANEL_PORT=7800
 PANEL_USER=fj03don1
-PANEL_PASS=ad256e33
+PANEL_PASS=CtdNkMr6pX
 PANEL_PATH=aap_login
 DB_ROOT_PASS=c71086c0f3577903
 
