--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "${WEBSERVER_SECURE_HOST_PORT}:443"
       - "${PHPMYADMIN_PORT}:888"
       - "${REDIS_PORT}:6379"
-      - "3306:3306"
+      - 3306:3306
     volumes: 
       - ${WEBSITE_DATA}:/www/wwwroot
       - ${WEBSITE_LOG}:/www/wwwlogs
@@ -33,13 +33,17 @@ services:
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
     ports:
-      - "9100:9100"
+      - 9100:9100
 
   mysqld-exporter:
     image: prom/mysqld-exporter
     container_name: mysqld-exporter
-    environment:
-      - DATA_SOURCE_NAME=mysqld_exporter:5BSAvzaKmTttTUif@(aapanel:3306)/
     ports:
-      - "9104:9104"
-
+      - 9104:9104
+    depends_on:
+      - aapanel
+    command:
+      - --mysqld.username=mysqld_exporter:5BSAvzaKmTttTUif
+      - --mysqld.address=aapanel-webserver:3306
+    volumes:
+      - ./mysql-exporter/.my.cnf:/root/.my.cnf
